# nustar_tools

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
nustar_tools/: requirements.txt
nustar_tools/mapping/: exposuremaps.py  heatmaps.py  maps.py  movies.py  tools.py
nustar_tools/mapping/styles/: map.mplstyle
nustar_tools/pixels/: PixelArray.py  RawPixelAnimation.py
nustar_tools/pixels/examples/: using_PixelArray.ipynb  using_RawPixelAnimation.ipynb
nustar_tools/plotting/: chus.py  combined.py  lightcurves.py  livetime.py  spectra.py  tools.py
nustar_tools/plotting/styles/: inset_lightcurve.mplstyle  lightcurve.mplstyle
nustar_tools/regions/: RegionSelector.py  deconvolve.py
nustar_tools/spectra/: broken_power_law.py  grade_spectra.py  pha_manipulation.py  response.py
nustar_tools/trackers/: CoordinateTracker.py  TrackerCorrelator.py
nustar_tools/trackers/examples/: correlator.ipynb  trackers.ipynb
nustar_tools/trackers/examples/centroid_coordinates/: 20180529_80410201001_fpmA_2s_RAW_centroid.pkl  20180529_80410201001_fpmB_2s_RAW_centroid.pkl
nustar_tools/trackers/styles/: tracker.mplstyle
nustar_tools/utils/: MinimumBoundingBox.py  default_conf.ini  histogram_tools.py  pipeline.py  solar_convert.py  time_tools.py  utilities.py
