[project]
dynamic = ["version"]
name = "nustar_tools"
license = {file = "LICENSE.md"}
description = "Fundamental package for array computing in Python"
authors = [{name = "Reed B. Masek"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "imageio",
    "matplotlib",
    "numpy",
    "nustar_pysolar",
    "parse",
    "photutils",
    "regions",
    "scipy",
    "scikit-image",
    "sunpy"
]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nustar_tools.__version__"}

[tool.setuptools.packages.find]
include = ["nustar_tools*"]
exclude = ["*test_files"]