[project]
dynamic = ["version"]
name = "nustar_tools"
license = {file = "LICENSE.md"}
description = "Basic tools for plotting and mapping NuSTAR data"
authors = [{name = "Reed B. Masek"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "imageio",
    "matplotlib",
    "numpy",
    "nustar_pysolar",
    "parse",
    "photutils",
    "regions",
    "ruptures",
    "scipy",
    "scikit-image",
    "sunpy"
]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

packages = [
    "nustar_tools",
    "nustar_tools.mapping",
    "nustar_tools.pixels",
    "nustar_tools.plotting",
    "nustar_tools.regions",
    "nustar_tools.spectra",
    "nustar_tools.trackers",
    "nustar_tools.utils",
]

[tool.setuptools.package-data]
"nustar_tools.mapping" = ["styles/*"]
"nustar_tools.plotting" = ["styles/*"]
"nustar_tools.trackers" = ["styles/*"]

[tool.setuptools.dynamic]
version = {attr = "nustar_tools.__version__"}

[tool.setuptools.packages.find]
exclude = ["*test_files"]